--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
         "express": "^4.18.2",
         "fs": "^0.0.1-security"
     },
+    "scripts": {
+        "start": "node index.js"
+    },
     "keywords": [],
     "author": "",
     "license": "ISC"
