--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "dependencies": {
         "body-parser": "^1.20.2",
         "express": "^4.18.2",
-        "fs": "^0.0.1-security"
+        "fs": "^0.0.1-security",
+        "jest": "^29.7.0"
     },
     "scripts": {
-        "start": "node index.js"
+        "start": "node index.js",
+        "test": "jest",
+        "test:coverage": "jest --coverage"
     },
     "keywords": [],
     "author": "",
